<resources>
    <string name="app_name">Activity Seven</string>
    <string name="student_file">FITXA ALUMNE</string>
    <string name="updatelist">updateList</string>
    <string name="include_one">IncludeOne</string>
    <string name="include_all">IncluideAll</string>
    <string name="clear_last">ClearLast</string>
    <string name="clear_all">ClearAll</string>
    <string name="update_one">UpdateOne</string>
    <string name="email">Email:</string>
    <string name="telefon">Telèfon:</string>
    <string name="dni">DNI:</string>
    <string name="repe">Repetidor:</string>
    <string name="tornar_enrere">Tornar a la Llista</string>
</resources>